# randao

./: .gitignore  .secret  CHANGELOG.md  Cargo.toml  DEV_GUIDE.md  Dockerfile  README.en.md  README.md  README.zh_CN.md  docker-compose.yml  docker-run.sh  handbook.md  handbook.zh_CN.md  index.html  package-lock.json  package.json  params.json  randao.sol  truffle-config.js  truffle.js  truffle.json
app/: index.html
app/javascripts/: app.js  mouseTracker.js  progress.js  randao.js  util.js
app/stylesheets/: _button-components.scss  _button-mixin.scss  _form-components.scss  _form-mixin.scss  randao.scss
config/: README.md  app.json  config.json  config0.json  config1.json  config2.json
config/development/: contracts.json
config/mainnet/: config0.json  config1.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json
config/prinet/: config0.json  config1.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json
config/test/: contracts.json
config/testnet/: config0.json  config1.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json
contracts/: Counter.sol  Dice.sol  Migrations.sol  Randao.sol  Sha3.sol  TheDivine.sol  matic_testnet_scenario.json  randao.sol
data/chaindata/: 000002.ldb  LOG  LOG.old  MANIFEST-000004
data/dapp/: LOG  LOG.old
diagrams/: RandaoSequenceDiagramUML.draw.io.xml
doc/: participant.rs  randao.rs
eth/: hardhat.config.ts  package.json
eth/contracts/: Migrations.sol
eth/scripts/: deploy.ts
eth/test/: randao.ts
geth-test/: README  commit.js  deploy.js  genesis_block.json  getRandom.js  newCampaign.js  reveal.js
geth-test/data/: history  nodekey
keys/: 0x02a5D1F97c24dC9399A2878dc44cbDA274093B6D.key  0xAB9F918fBefE4b6C9464774F06482DEf349579EF.key  0xf016802048A95017bAa7670c944D23537b2b2F19.key
migrations/: 2_deploy_contracts.js
randao/: Cargo.toml  Randao_sol_Randao.abi  config.json  encode.sh
randao/src/: api.rs  config.rs  contract.rs  db.rs  error.rs  lib.rs  main.rs  profiler.rs  utils.rs
randao/src/commands/: mod.rs
randao/src/test-keys/: test-key.json  tranfer.sh
scripts/: campaign_creator_daemon.js  participant_daemon.js  randao_simulator.js  utils.js
test/: callback.js  commit.js  newCampaign.js  randao.js  random.js  refund.js  refundBounty.js  reveal.js  sha3.js  timecop.js
wallet/: participant0.key  participant1.key  participant2.key
(+23 files in other folders)
