[package]
name = "randao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3  = "0.18.0"
secp256k1 = { version = "0.21", features = ["recovery"]}
bip0039 = "0.10.1"
bip32 = "0.4.0"
libsecp256k1 = { version = "0.7", features = ["static-context", "hmac"] }
hex = "0.4.3"
eth_checksum = "0.1.2"
sha3 = "0.10.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.5"
clap = {version = "3.1", features = ["derive"]}
url = {version = "2.2.2", features = ["serde"]}
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
log = { version ="0.4.16", features = ["std", "serde"] }
env_logger = "0.10.0"
chrono = "0.4.19"
redis = { version = "0.21.5", features =[ "default", "tokio-comp" ] }
derive_more = "0.99.17"
anyhow = "1.0.44"
prometheus = "0.13.3"
csv = "1.1.6"
lazy_static = "1.4.0"
ethabi="18.0.0"
rand = "0.8.5"
nix = {version = "0.26.1", features=["signal"]}
uuid = {version ="1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics"]}
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-rt = "2.1.0"
actix-cors = "0.6.1"
async-trait = "0.1.42"
rc = "0.1.1"
hyper = { version = "0.14.23", features = ["server", "http1", "tcp"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
num_cpus = "1.15.0"